--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 
 <body>
-	<img src=""></img>
+	<img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg?raw=true">
 </body>
 </html>
