--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 
 <body>
 	<img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg?raw=true">
-	<span style="display:none;">スーパーかにぴょんぴょん</span>
+	<div><span style="display:none;">スーパーかにぴょんぴょん</span></div>
 </body>
 </html>
