--- a/e/index.html
+++ b/e/index.html
@@ -1,8 +1,12 @@
-<html>
-  <head>
-    <title>準備中…</title>
-  </head>
-  <body>
-    <h1>まだ何もないよ！</h1>
-  </body>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>準備中…</title>
+</head>
+
+<body>
+  <h1>まだ何もないよ！</h1>
+</body>
 </html>
