--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>ネコと和解せよ</title>
 </head>
 
 <body>
-	<img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg?raw=true">
-	<span style="display:none;">スーパーかにぴょんぴょん</span>
+    <a href="/e/">
+        <img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg" alt="準備ちう…">
+    </a>
+    <span style="display:none;">スーパーかにぴょんぴょん</span>
 </body>
 </html>
