--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <body>
     <a href="/e/">
-        <img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg" alt="準備ちう…">
+        <img src="https://github.com/kanipyonyan/kanipyonyan.github.io/blob/main/image.jpg" alt="">
     </a>
     <span style="display:none;">スーパーかにぴょんぴょん</span>
 </body>
