--- a/e.html
+++ b/e.html
@@ -1,1 +1,8 @@
-<p><a href="https://comic-walker.com/viewer/?tw=2&dlcl=ja&cid=KDCW_MF01203582010013_68">あ</a></p>
+<html>
+  <head></head>
+  <body>
+    <p>
+      <a href="https://comic-walker.com/viewer/?tw=2&dlcl=ja&cid=KDCW_MF01203582010013_68">あ</a>
+    </p>
+  </body>
+</html>
