--- a/e.html
+++ b/e.html
@@ -3,6 +3,7 @@
   <body>
     <p>
       <a href="https://comic-walker.com/viewer/?tw=2&dlcl=ja&cid=KDCW_MF01203582010013_68">あ</a>
+      <a href="https://twitter.com/share?text=%E7%A7%81%E3%81%AEIQ%E3%81%AF%20124%E3%81%A7%E3%81%97%E3%81%9F%E3%80%82%E3%81%82%E3%81%AA%E3%81%9F%E3%82%82%E4%BB%A4%E5%92%8C%E4%B8%80%E7%99%BA%E7%9B%AE%E3%81%AEIQ%E6%B8%AC%E5%AE%9A%E3%81%97%E3%81%A6%E3%81%BF%E3%81%AA%E3%81%84%EF%BC%9F&hashtags=%E4%BB%A4%E5%92%8C%E5%88%9DIQ%E3%83%86%E3%82%B9%E3%83%882020%E5%B9%B4%E7%89%88&url=https%3A%2F%2Fwww.arealme.com%2Fiq-2020%2Fja%2F6400692">あああ</a>
     </p>
   </body>
 </html>
