--- a/35.html
+++ b/35.html
@@ -1,1 +1,13 @@
-<a href="https://35.gigafile.nu/0208-dc40991bf85db172324c5a87b6f71b410">aaa</a>
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>ちょん</title>
+</head>
+
+<body>
+    <a href="https://35.gigafile.nu/0208-dc40991bf85db172324c5a87b6f71b410">aaa</a>
+</body>
+</html>
+
