--- a/330.html
+++ b/330.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <script>
+        location.href = "https://note.com/reiwaika";
+    </script>
 </body>
 </html>
