--- a/330.html
+++ b/330.html
@@ -6,8 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="javascript:onclick2();">123654789</a>
     <script>
-        location.href = "https://note.com/reiwaika";
+        function onclick2() {
+            location.href = "https://note.com/reiwaika";
+        }
     </script>
 </body>
 </html>
