--- a/index2.html
+++ b/index2.html
@@ -19,6 +19,8 @@
                 break;
         }
         location.href = url;
+        console.log(rand);
+        console.log(url);
     </script>
 </body>
 </html>
