--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        const rand = Math.random();
+        let rand = Math.random();
         rand *= 2;
         url = ".";
         switch (rand) {
@@ -19,8 +19,6 @@
                 break;
         }
         location.href = url;
-        console.log(rand);
-        console.log(url);
     </script>
 </body>
 </html>
