--- a/index2.html
+++ b/index2.html
@@ -15,7 +15,7 @@
                 url = "https://instagr.am/rainbowgate6353/";
                 break;
             case 1:
-                
+                url = "https://youtu.be/LU3f8ZGfd5g";
                 break;
         }
         location.href = url;
