--- a/index2.html
+++ b/index2.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <script>
-        let rand = Math.random();
-        rand *= 2;
+        let rand = Math.random() * 2;
+        rand = Math.floor(rand);
         url = ".";
         switch (rand) {
             case 0:
