--- a/index2.html
+++ b/index2.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <script>
-        let rand = Math.random() * 2;
+        let rand = Math.random() * 3;
         rand = Math.floor(rand);
         url = ".";
         switch (rand) {
@@ -16,6 +16,9 @@
                 break;
             case 1:
                 url = "https://youtu.be/LU3f8ZGfd5g";
+                break;
+            case 2:
+                url = "https://youtu.be/dDwN4MgcIlU";
                 break;
         }
         location.href = url;
